1) fixed compilation errors